tests/NormalTests/paczka1/fuzzy1/19423748.err
Error in line 8: t4Hy64Q1k S125 0,3
Error in line 15: jLENi6GJf S125 94,6
Error in line 12: t4Hy64Q1k S975 70,2
Error in line 17: jLENi6GJf A345 87,4
